--- a/package.json
+++ b/package.json
@@ -1,21 +1,22 @@
 {
-  "name": "goit-react-hw-03-image-finder",
+  "name": "hw1",
   "version": "0.1.0",
   "private": true,
-  "homepage": "https://mashkosorik.github.io/goit-react-hw-03-image-finde",
+  "homepage": "https://RomanSoroka85.github.io/goit-react-hw-03-image-finder",
   "dependencies": {
-    "@testing-library/jest-dom": "^5.14.1",
-    "@testing-library/react": "^11.2.7",
-    "@testing-library/user-event": "^12.8.3",
-    "gh-pages": "^3.2.3",
-    "react": "^17.0.2",
-    "react-dom": "^17.0.2",
-    "react-loader-spinner": "^4.0.0",
-    "react-scripts": "4.0.3",
-    "react-toastify": "^8.0.3",
+    "@testing-library/jest-dom": "^5.11.6",
+    "@testing-library/react": "^11.2.2",
+    "@testing-library/user-event": "^12.4.0",
+    "axios": "^0.21.1",
+    "react": "^17.0.1",
+    "react-dedux": "^0.4.0-beta.4",
+    "react-dom": "^17.0.1",
+    "react-redux": "^7.2.2",
+    "react-scripts": "4.0.1",
+    "redux": "^4.0.5",
+    "redux-devtools-extension": "^2.13.8",
     "uuid": "^8.3.2",
-    "uuidv4": "^6.2.12",
-    "web-vitals": "^1.1.2"
+    "web-vitals": "^0.2.4"
   },
   "scripts": {
     "start": "react-scripts start",
@@ -42,5 +43,8 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
+  },
+  "devDependencies": {
+    "gh-pages": "^3.2.3"
   }
 }
