--- a/package.json
+++ b/package.json
@@ -11,8 +11,10 @@
     "react": "^17.0.1",
     "react-dedux": "^0.4.0-beta.4",
     "react-dom": "^17.0.1",
+    "react-loader-spinner": "^4.0.0",
     "react-redux": "^7.2.2",
     "react-scripts": "4.0.1",
+    "react-scroll": "^1.8.4",
     "redux": "^4.0.5",
     "redux-devtools-extension": "^2.13.8",
     "uuid": "^8.3.2",
